--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -72,7 +72,7 @@
 		<table>
 			<tr><td rowspan="4">
 					{if $filename}
-						<a href="{$baseUri}/{$filename}" target="_blank"><img src="{$baseUri}/{$filename}" alt="fotografie" height="150"></a>
+						<a href="{$baseUrl}/{$filename}" target="_blank"><img src="{$baseUrl}/{$filename}" alt="fotografie" height="150"></a>
 					{else}
 						<div id="photo">FOTOGRAFIE</div>
 					{/if}
