--- a/app/PhotoModule/templates/Album.default.latte
+++ b/app/PhotoModule/templates/Album.default.latte
@@ -1,6 +1,6 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/photolist.css" type="text/css">
-<script src="{$baseUri}/js/nette.ajax.js"></script>
+<link rel="stylesheet" href="{$baseUrl}/css/photolist.css" type="text/css">
+<script src="{$baseUrl}/js/nette.ajax.js"></script>
 <script type="text/javascript" n:syntax="off" n:nonce>
 	$(function () {
 		$.nette.init();
