--- a/app/PhotoModule/templates/Album.users.latte
+++ b/app/PhotoModule/templates/Album.users.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/photolist.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/photolist.css" type="text/css">
 <style type="text/css" n:syntax="off">
 #albumList h2 {margin-top: 1em;}
 </style>
