--- a/app/SignModule/templates/Sign.in.latte
+++ b/app/SignModule/templates/Sign.in.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/symbols.css">
+<link rel="stylesheet" href="{$baseUrl}/css/symbols.css">
 
 <style type="text/css" media="screen" n:syntax="off">
 	.facebook { background-color: #3C5A99;}
