--- a/app/MemberModule/templates/Mail.add.latte
+++ b/app/MemberModule/templates/Mail.add.latte
@@ -19,12 +19,12 @@ input.buttonLike:active { background-color: #da251c; color: white; background-im
 #adresati { background-color: #EEE; border: 1px solid gray; border-radius: 2px; color: rgb(64,64,64); margin: 1ex 0px;}
 #adresati p { clear: both; padding-top: 1em; margin-bottom: 0px;}
 </style>
-<script type="text/javascript" src="{$baseUri}/js/jquery-ui.custom.min.js"></script>
-<script type="text/javascript" src="{$baseUri}/js/jquery.shortcuts.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.shortcuts.min.js"></script>
 
 {control texylaJs}
 
-<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.textarea_autosize.min.js"></script>
 <script type="text/javascript" n:nonce>
 	$.Shortcuts.add({
 	    	mask: 'Ctrl+A',
