--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUri}/css/jquery-ui.min.css" type="text/css" media="screen">
+<link rel="stylesheet" href="{$baseUrl}/css/jquery-ui.min.css" type="text/css" media="screen">
 
 <style type="text/css" n:syntax="off">
 	.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
@@ -15,12 +15,12 @@
 	#ui-datepicker-div { z-index: 5 !important;}
 </style>
 
-<script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
+<script src="{$baseUrl}/js/netteForms.min.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="{$baseUri}/js/jquery.hotkeys.js"></script>
-<script type="text/javascript" src="{$baseUri}/js/jquery-ui-1.12.1.min.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.hotkeys.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui-1.12.1.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.textarea_autosize.min.js"></script>
 
 <script type="text/javascript" n:nonce>
 	$(function() {
@@ -92,7 +92,7 @@
 <ul id="list" class="photoList" n:inner-foreach="$photos as $image">
 	<li>
 		<label n:name="photos-$image->id-selected" n:class="(($album->visible) and (!$image->visible)) ? 'hidden'">
-			<img src="{$baseUri}/{$photoDir.'/'.$image->album_id.'/'.$image->filename|thumb:150:100}" alt="{$image->filename}" class="image">
+			<img src="{$baseUrl}/{$photoDir.'/'.$image->album_id.'/'.$image->filename|thumb:150:100}" alt="{$image->filename}" class="image">
 		</label>
 		<input n:name="photos-$image->id-selected" class="selected">
 		<div><input n:name="photos-$image->id-text" class="title" data-date="{$image->date_taken ? $image->date_taken->format('d.m.Y H:i:s')}" data-title="{$image->text}"></div>
@@ -108,8 +108,8 @@
 
 <p>Pokud chcete rychle označit všechny fotografie, použijte klávesovou zkratku <b>Crtl+A</b></p>
 
-<p>Jestliže mají některé Vaše fotografie ikonku <img src="{$basePath}/img/eye-close.svg" style="height: 1em"> nebo v menu alba vidíte položku <b>změnit viditelnost</b>
-	znamená to, že Vaše album bylo označeno jako <b>viditelné pro veřejnost</b>. <b>Ikonka <img src="{$basePath}/img/eye-close.svg" style="height: 1em"></b> je znamení, že tato fotografie
+<p>Jestliže mají některé Vaše fotografie ikonku <img src="{$baseUrl}/img/eye-close.svg" style="height: 1em"> nebo v menu alba vidíte položku <b>změnit viditelnost</b>
+	znamená to, že Vaše album bylo označeno jako <b>viditelné pro veřejnost</b>. <b>Ikonka <img src="{$baseUrl}/img/eye-close.svg" style="height: 1em"></b> je znamení, že tato fotografie
 je <b>neviditelná pro veřejnost</b>.</p>
 
 {/block}
