--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -1,6 +1,6 @@
 {block #head}
-<link rel="stylesheet" type="text/css" href="{$baseUri}/css/jquery-ui.min.css" />
-<link rel="stylesheet" type="text/css" href="{$baseUri}/css/photolist.css">
+<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/jquery-ui.min.css" />
+<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photolist.css">
 <style type="text/css" n:syntax="off">
 #news { margin-left: 2em;}
 #news h3 { margin-bottom: 0;}
@@ -9,12 +9,12 @@
 ul { list-style: disc;}
 </style>
 
-<script src="{$baseUri}/js/netteForms.min.js" type="text/javascript"></script>
+<script src="{$baseUrl}/js/netteForms.min.js" type="text/javascript"></script>
 
 {*<script type="text/javascript" src="{$basePath}/js/jquery-ui-1.10.2.min.js"></script>*}
-<script type="text/javascript" src="{$basePath}/js/jquery-ui-1.12.1.min.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
-<script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui-1.12.1.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
 {/block}
 
 
