--- a/app/PhotoModule/templates/News.default.latte
+++ b/app/PhotoModule/templates/News.default.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" type="text/css" href="{$baseUri}/css/photolist.css">
+<link rel="stylesheet" type="text/css" href="{$baseUrl}/css/photolist.css">
 <style type="text/css" n:syntax="off">
 	#slides { position: relative; height: 360px;}
 	#js-slides { display: none;}
@@ -9,7 +9,7 @@
 	border-radius: 5px; box-shadow: 7px 7px 0 #161b1c;}
 </style>
 
-<script src="{$baseUri}/js/jquery.slides.min.js" type="text/javascript"></script>
+<script src="{$baseUrl}/js/jquery.slides.min.js" type="text/javascript"></script>
 <script type="text/javascript" n:syntax="off" n:nonce>
 	$(function(){
 		$('#js-slides').slidesjs({
@@ -44,7 +44,7 @@
 	<li><div class="slide spinner">
 		{var $album = $image->ref('album')}
 		<a n:href="Album:view#$image->filename,$album->id.'-'.$album->slug" title="{$album->name}">
-		<img src="{$baseUri}/{$photoDir.'/'.$image->album_id.'/'.$image->filename}" alt="{$image->filename}">
+		<img src="{$baseUrl}/{$photoDir.'/'.$image->album_id.'/'.$image->filename}" alt="{$image->filename}">
 		</a>
 	</div></li>
 	</ul>
