--- a/app/SignModule/templates/@layout.latte
+++ b/app/SignModule/templates/@layout.latte
@@ -8,19 +8,19 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="content-language" content="cs">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
-	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
+	<link rel="shortcut icon" href="{$baseUrl}/img/favicon.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUrl}/img/favicon.svg" type="image/svg+xml">
 	<title>Přihlášení | VZS Jablonec</title>
-	<link rel="stylesheet" href="{$baseUri}/css/sign.css" type="text/css">
-	<link rel="stylesheet" href="{$baseUri}/css/sign-symbols.css" type="text/css">
-	<script src="{$baseUri}/js/netteForms.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="{$baseUrl}/css/sign.css" type="text/css">
+	<link rel="stylesheet" href="{$baseUrl}/css/sign-symbols.css" type="text/css">
+	<script src="{$baseUrl}/js/netteForms.js" type="text/javascript"></script>
 	{block #head}{/block}
 </head>
 <body>
 	<div id="hlavni">
 		<div id="nahore">
-			<img class="float-left" src="{$baseUri}/img/vzs.svg" alt="Vodní záchranná služba ČČK" width="95" height="95">
-			<img class="float-right" src="{$baseUri}/img/zralok.svg" alt="VZS Jablonec nad Nisou" width="95" height="95">
+			<img class="float-left" src="{$baseUrl}/img/vzs.svg" alt="Vodní záchranná služba ČČK" width="95" height="95">
+			<img class="float-right" src="{$baseUrl}/img/zralok.svg" alt="VZS Jablonec nad Nisou" width="95" height="95">
 		</div>
 
 		<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
