Rename domain from 'sign' to 'account'

--- a/app/AccountModule/templates/Sign.default.latte
+++ b/app/AccountModule/templates/Sign.default.latte
@@ -3,7 +3,7 @@
 <p>{if $user->isLoggedIn()}
 	Aktuálně jste přihlášen. <a n:href="Sign:out">Odhlásit</a>
 	{else}
-	Aktuálně nejste přihlášen. <a n:href="Sign:in">Přihlásit</a>
+	Aktuálně nejste přihlášen.
 	{/if}
 </p>
 
