--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -2,6 +2,6 @@ Zdravím
 
 Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
-Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $session->pubkey}
+Můžete si ho nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
 
 Tento odkaz bude fungovat do {$session->date_end|date:'H:i:s d.m.Y'}
