--- a/app/AccountModule/templates/Register.default.latte
+++ b/app/AccountModule/templates/Register.default.latte
@@ -1,12 +1,9 @@
 {block #head}
 <style type="text/css" media="screen" n:syntax="off">
-	label { font-weight: normal}
-	label.required { font-weight: bold}
 	fieldset { border: none;}
 	fieldset table { margin-left: 1em}
 	legend { font-weight: bold; margin-bottom: 1ex;}
-	.error { color: red;}
-	#hlavni { max-width: 40em};
+	#main { max-width: 40em};
 </style>
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
 <script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
