--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -2,7 +2,7 @@
 
 Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.
 
-Svoje heslo si můžeš nastavit na adrese: {link //Sign:restorePassword pubkey => $session->pubkey}
+Svoje heslo si můžeš nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
  Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})
 
 Svůj profil najdeš na adrese: {link //User:profile}
