--- a/www/subdom/account/css/account.css
+++ b/www/subdom/account/css/account.css
@@ -23,7 +23,6 @@ svg.icon { margin: 0 0.4ex; vertical-align: -5%}
 
 div.flash:before {font-size: 120%; line-height: 50%; speak: none;}
 
-
 .buttonMenu {padding: 0; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
 
@@ -69,7 +68,7 @@ div.flash.info:before {content: '✔'; margin-right: 1ex;}
 div.flash.error{color: red; border: 1px solid firebrick; background-color: salmon;}
 div.flash.error:before {content: '✘'; margin-right: 1ex;}
 
-ul.error li {color: red;}
+.error {color: red;}
 
 .loader { background-image: url('../img/loading.gif'); background-repeat: no-repeat; display: inline-block; height: 24px; width: 24px; background-position: center;}
 
@@ -86,6 +85,17 @@ a.head {background-color: #12397e; font-size: 2ex; border: 1px solid black;
 	background-image: linear-gradient(#0089d2,#12397e);
 }
 
-table { margin: 0 auto; text-align: left; }
-#hlavni { max-width: 30em; margin: 0 auto; text-align: center; }
-#nahore { height: 95px; margin: 1em auto 1em auto; padding: 0 4em; overflow: hidden; }
+form table { margin: 0 auto; text-align: left; }
+label { font-weight: normal}
+label.required { font-weight: bold}
+
+.box {display: flex;}
+.row {flex-direction: row;}
+.column {flex-direction: column;}
+.grow { flex-grow: 1}
+
+#main { max-width: 32em; margin: 0 auto; text-align: center; padding: 1em;}
+#top { justify-content: space-around; padding-bottom: 1em; border-bottom: 1px solid gray;}
+#menu { justify-content: space-around; padding: 0; border-top: 1px solid gray;}
+#menu li { list-style-type: none;}
+#menu li a { color: #555555}
