Make the backgrooud more light

--- a/app/AccountModule/templates/Sign.in.latte
+++ b/app/AccountModule/templates/Sign.in.latte
@@ -6,7 +6,7 @@
 	.google { background-color: #DC4A38;}
 	.social-login a { margin: 0 auto; padding: 0.6ex 0; font-size: 0.95em; color: white; display: block; width: 18em; }
 	#content .row { margin: 1em 0; padding: 1em; border: 1px solid silver; }
-	#content .row:nth-child(1) { background-color: #cbcbcb;}
+	#content .row:nth-child(1) { background-color: #e2e2e2;}
 </style>
 {/block}
 
