--- a/app/AccountModule/templates/Sign.restorePassword.latte
+++ b/app/AccountModule/templates/Sign.restorePassword.latte
@@ -1,8 +1,7 @@
 {block #content}
-  
+  <article>
   {control restorePasswordForm}
 
-  <hr>
-
-  <p>Tento okaz bude platný přesně do {$date_end|date:'d.m.Y H:i:s'} (zbývá {$time_remain|date:'%H:%I:%S'})</p>
+    <p>Tento okaz bude platný přesně do {$date_end|date:'d.m.Y H:i:s'} (zbývá {$time_remain|date:'%H:%I:%S'})</p>
+  </article>
 {/block}
