Add module on every links in mails templates

--- a/app/presenters/templates/Mail/akceConfirm.latte
+++ b/app/presenters/templates/Mail/akceConfirm.latte
@@ -8,6 +8,6 @@ Na web byla přidána následující akce:
 
 Tato akce není schválena a čeká na Vaše potvrzení.
 
-Akci najdete na adrese {link //Akce:view $akce->id}
+Akci najdete na adrese {link //:Member:Akce:view $akce->id}
 
 Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
