--- a/app/presenters/templates/Mail/newHlasovani.latte
+++ b/app/presenters/templates/Mail/newHlasovani.latte
@@ -1,7 +1,7 @@
 Zdravím
 
 Dnes {$hlasovani->date_add|date:'%d.%m.%Y'} v {$hlasovani->date_add|date:'H:i'}
-bylo na našem webu vytvořeno nové hlasování představentstva. Můžete jej najít na adrese: {link //Hlasovani:view $hlasovani->id}
+bylo na našem webu vytvořeno nové hlasování představentstva. Můžete jej najít na adrese: {link //:Member:Hlasovani:view $hlasovani->id}
 Toto hlasování končí {$hlasovani->date_deatline|date:'%d.%m.%Y'}
 
 **{$hlasovani->title}**
