--- a/app/presenters/templates/Mail/newRegistration.latte
+++ b/app/presenters/templates/Mail/newRegistration.latte
@@ -6,6 +6,6 @@ Na webu se nově registroval nový uživatel.
 
 Tento uživatelsý účet není aktivní a čeká na potvrzení.
 
-Jeho profil najdete na adrese {link //User:view $user->id}
+Jeho profil najdete na adrese {link //:Member:User:view $user->id}
 
 Prosím navštivte co nejdříve jeho profil, aby se mohl případně přihlásit
