New custom made loading SVG

--- a/app/PhotoModule/templates/Album.default.latte
+++ b/app/PhotoModule/templates/Album.default.latte
@@ -33,7 +33,7 @@
 
 	<p n:snippet="button" class="center">
 		<a n:if="$needMore" class="ajax" id="load-more-button" n:href="loadMore! $offset">
-			<img src="{$baseUrl}/img/tail-spin.svg" alt="loading" width="25" height="25"> nahrát další alba
+			<img src="{$baseUrl}/img/loader.svg" alt="loading" width="25" height="25"> nahrát další alba
 		</a>
 	</p>
 
