Custom made photos thumb generatinon, store thumbs filenames in database

--- a/app/MemberModule/components/AlbumPreviewControl.latte
+++ b/app/MemberModule/components/AlbumPreviewControl.latte
@@ -1,10 +1,7 @@
 <div id="album" n:if=$album>
-<a href="{plink :Photo:Album:view,$album->id.'-'.$album->slug}" target="_blank">{$album->name}</a>
-
-<a href="{plink :Photo:Album:view,$album->id.'-'.$album->slug}" target="_blank" title="{$album->text|truncate:70}" class="round">
+<a href="{plink :Photo:Album:view,$album->id.'-'.$album->slug}" target="_blank" title="{$album->text|truncate:70}">{$album->name}
     <ul n:if="isset($photos)" n:inner-foreach="$photos as $image" class="photoList">
-        <li><img src="{$photoUri}{$photoDir.'/'.$image->album_id.'/'.$image->filename|thumb:150:100}" width="150"
-                 height="100" alt="{$image->filename}"></li>
+        <li><img src="{$photoUri}{$photoDir}/thumbs/{$image->album_id}/{$image->thumb}" width="150" height="100" alt="{$image->filename}"></li>
     </ul>
 </a>
 
