Rename SuperForm => PhotoForm + code reformat

--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -58,7 +58,7 @@
 {/block}
 
 {block #content}
-{form superForm}
+{form photoForm}
 
 <ul class="menu float_right">
 	<li n:if="$album->visible">{input visible class => buttonLike}</li>
