TYPO, rename member_id .=> user_id

--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -74,7 +74,7 @@
 	<li>{input turnRight class => buttonLike}</li>
 </ul>
 
-<p>{label member_id /} {input member_id}</p>
+<p>{label user_id /} {input user_id} <span class="no-wrap">{label date /} {input date}</span></p>
 
 
 <p id="photoText">{input text}</p>
