--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -73,7 +73,7 @@
     <p title="Místo">{include svg icon => map-marker} {$akce->place}
         <sup><a href="https://mapy.cz/zakladni?q={$akce->place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg icon => search}Mapy.cz</a></sup></p>
 
-    <p n:if="$akce->member_id" title="Zodpovědná osoba">{include svg icon => user-o} <a n:href="User:view $akce->member_id">{$akce->member->surname} {$akce->member->name}</a></p>
+    <p n:if="$akce->member_id" title="Zodpovědná osoba">{include svg icon => user-o} <a n:tag-if="$akce->member->role" n:href="User:view $akce->member_id">{$akce->member->surname} {$akce->member->name}</a></p>
 
     <p>{include svg icon => tag} {$akce->akce_for->text}{if $akce->visible}, viditelná veřejnosti{else}, viditelná pouze členům{/if}</p>
 
