--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -36,7 +36,7 @@
 			</div>
 			<div class="no-wrap">
 				<a title="{$post->date_add|timeAgoInWords}" n:href="Forum:post,$post->id">
-					{include svg icon => comments-o} {$post->date_add|date:'%d.%m.%Y %H:%M'}
+					{include svg icon => comments-o} <time datetime="{$post->date_add|date:'c'}">{$post->date_add|date:'%d.%m.%Y %H:%M'}</time>
 				</a>
 			</div>
 			<div class="no-wrap">
