--- a/app/AccountModule/templates/Sign.restorePassword.latte
+++ b/app/AccountModule/templates/Sign.restorePassword.latte
@@ -2,6 +2,6 @@
   <article>
   {control restorePasswordForm}
 
-    <p>Tento okaz bude platný přesně do {$date_end|date:'d.m.Y H:i:s'} (zbývá {$time_remain|date:'%H:%I:%S'})</p>
+    <p>Tento okaz bude platný přesně do <time datetime="{$date_end|date:'c'}">{$date_end|date:'d.m.Y H:i:s'}</time> (zbývá {$time_remain|date:'%H:%I:%S'})</p>
   </article>
 {/block}
