--- a/app/PhotoModule/templates/Album.view.latte
+++ b/app/PhotoModule/templates/Album.view.latte
@@ -1,31 +1,16 @@
 {block #head}
-<link rel="stylesheet" href="{$baseUrl}/css/jquery.fancybox.min.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="{$baseUrl}/css/jquery.fancybox.min.css" type="text/css" media="screen" />
 
-<style type="text/css" n:syntax="off">
-	#photoBottom { clear: both; padding-top: 1em; }
-	.popis span.member { font-size: 1.1em; }
-	.photoList li { position: relative; }
-	.icon { vertical-align: bottom; }
-</style>
+	<style type="text/css" n:syntax="off">
+		#photoBottom { clear: both; padding-top: 1em; }
+		.popis span.member { font-size: 1.1em; }
+		.photoList li { position: relative; }
+		.icon { vertical-align: bottom; }
+	</style>
 
-<script src="{$baseUrl}/js/confirm.js" type="text/javascript"></script>
+	<script src="{$baseUrl}/js/confirm.js" type="text/javascript"></script>
 	<script src="{$baseUrl}/js/jquery.fancybox.min.js" type="text/javascript"></script>
-	<script type="text/javascript" n:syntax="off" n:nonce>
-		$(document).ready(function() {
-			$().fancybox({
-				selector: '[data-fancybox="images"]',
-				loop    : true,
-				hash	: false,
-				afterShow: function(fancybox, element) {
-					var filename = element.src.substring(element.src.lastIndexOf('/')+1);
-					history.replaceState(null, null, window.location.href.split("#")[0]+'#'+filename);
-				},
-				afterClose: function() {
-					history.replaceState(null, null, window.location.pathname);
-				}
-			});
-		});
-</script>
+	<script src="{$baseUrl}/js/fancybox.js" type="text/javascript" ></script>
 {/block}
 
 {block #content}
