--- a/app/MemberModule/components/TopicsListControl.latte
+++ b/app/MemberModule/components/TopicsListControl.latte
@@ -43,7 +43,7 @@
                     </a>
                 </div>
                 <div class="no-wrap">
-                    <time datetime="{$topic->date|date:'c'}">{$topic->date_add|date:'%d.%m.%Y %H:%M'}</time>
+                    <time datetime="{$topic->date_add|date:'c'}">{$topic->date_add|date:'%d.%m.%Y %H:%M'}</time>
                 </div>
             </td>
 
